# cam3dview

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/maia/: CMakeLists.txt  main.cpp
src/maia/gui/: CMakeLists.txt  imgui_extensions.cpp  imgui_extensions.h
